fix mobile sizing and text align center

--- a/src/components/committee/committee.scss
+++ b/src/components/committee/committee.scss
@@ -49,6 +49,9 @@
       justify-content: center;
       align-items: center;
     }
+    .textContainer {
+      text-align: center;
+    }
     .imageContainer {
       width: 400px;
       max-height: 500px;
@@ -69,6 +72,19 @@
   @media screen and (max-width: $mobile) {
     .heading {
       text-align: left;
+    }
+    .committeeMembers {
+      margin: 0;
+      margin-top: 25px;
+    }
+    .imageContainer {
+      width: 100%;
+    }
+    .memberContainer {
+      width: 100%;
+      margin: 0;
+      margin-bottom: 50px;
+      padding: 0 10px;
     }
   }
 }
